# problems

./: .gitignore  .ycm_extra_conf.py  README.md  TODO.txt
almost_equal/: main.cpp
array_manipulation/: main.cpp
arrays_and_strings/is_rotation/: main.cpp
arrays_and_strings/rotate_array/: main.cpp
arrays_and_strings/rotate_matrix_90/: main.cpp
arrays_and_strings/steady_gene/: README.md  main.cpp
binary_search/: main.cpp
bit_manipulation/max_bitwise_and/: main.cpp
bit_manipulation/prison-cells-after-n-days/: main.cpp
bit_manipulation/single_number/: CMakeLists.txt  README.md  main.cpp
bonetrousle/: main.cpp
breadth_first_search/: main.cpp
bst_height/: main.cpp
car_fueling/: main.cpp
check_palindrome/: main.cpp
codeforces/1/a/: main.cpp
codeforces/803/a/: main.cpp
consistent_relations/: main.cpp
constructive/: README.md
constructive/bonetrousle/: README.md  main.cpp
constructive/distances_to_zero/: README.md  main.cpp
constructive/max_binary_matrix/: README.md  main.cpp
count_min_swaps/: main.cpp
count_triplets/: main.cpp
coursera/algorithmic-toolbox/change_money/: in.txt  main.cpp
coursera/algorithmic-toolbox/closest_points/: main.cpp
coursera/algorithmic-toolbox/collecting_signatures/: main.cpp
coursera/algorithmic-toolbox/knapsack/: in.txt  main.cpp
coursera/algorithmic-toolbox/polynomial_multiplication/: main.cpp
cracking_the_coding_interview/bit_manipulation/binary_to_string/: README.md  main.cpp
cracking_the_coding_interview/bit_manipulation/draw_line/: main.cpp
cracking_the_coding_interview/bit_manipulation/flip_bit_to_win/: main.cpp
cracking_the_coding_interview/recursion_and_dynamic_programming/eight_queens/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/recursion_and_dynamic_programming/stack_of_boxes/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/common_sorting_algorithms/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/find_duplicates/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/group_anagrams/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/peaks_and_valleys/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/rank_from_stream/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/search_in_rotated_array/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/searching_algorithms/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/sort_big_file/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/sorted_matrix_search/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/sorted_merge/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/sorted_search_no_size/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/sorting_and_searching/sparse_search/: CMakeLists.txt  main.cpp
cracking_the_coding_interview/stacks_and_queues/: queue_via_stacks
data_structures/two_stacks_queue/: main.cpp
design/email_storage_service/: README.md
dynamic/abbreviation/: main.cpp
dynamic/is_k_palindrome/: main.cpp
dynamic/longest_common_subsequence/: main.cpp
dynamic/longest_common_subsequence_n/: main.cpp
dynamic/max_subarray/: README.md  main.cpp
dynamic/max_value_of_arithmetic_expression/: README.md  main.cpp
dynamic/string_reduction/: main.cpp
facebook/birth_and_death/: main.cpp
facebook/look_and_say/: main.cpp
facebook/one_edit_apart/: main.cpp
facebook/spiral_array/: main.cpp
find_equilibrium/: main.cpp
find_segment_with_sum/: main.cpp
google/matrix_route/: CMakeLists.txt  README.md  main.cpp
google/max_value/: README.md
google/submatrix_sum/: README.md
greatest_common_divisor/: main.cpp
greedy/reverse_shuffle_merge/: README.md  main.cpp
hackerrank/max_min_riddle/: README.md  main.cpp
hackerrank/radio_transmitters/: main.cpp
hackerrank/reverse_shuffle_merge/: main.cpp
has_vertical_symmetry_line/: main.cpp
hash_tables/count_triplets/: main.cpp
hash_tables/subarray_sum/: main.cpp
hourglass_sum/: main.cpp
in_place_merge_sort/: main.cpp
is_prime/: main.cpp
lib/io/: io.h
lib/matrix/: matrix.h
lib/random/: random.h
lib/tree/: tree.h
lib/utility/: utility.h
linked_lists/lru_cache/: input.txt  main.cpp
linked_lists/reverse_singly_linked_list/: main.cpp  node.h
max_bitwise_and/: main.cpp
max_subarray_sum/: main.cpp
maximum_consecutive_1/: main.cpp
minimum_bribes/: main.cpp
misc/greatest_common_divisor/: main.cpp
misc/look_and_say/: README.md  main.cpp
misc/minimum_bribes/: main.cpp
misc/zero_matrix/: main.cpp
remove_smiles/: main.cpp
rle/: main.cpp
sandbox/min_heap/: main.cpp
sandbox/min_queue/: main.cpp  min_queue.h
sandbox/min_stack/: main.cpp  min_stack.h
sandbox/two_stacks_queue/: main.cpp  two_stacks_queue.h
search/binary_search/: main.cpp
search/fuzzy_search/: main.cpp
sort/bubble_sort/: main.cpp
sort/count_inversions/: main.cpp
sort/count_min_swaps/: main.cpp
sort/heap_sort/: main.cpp
sort/insertion_sort/: main.cpp
sort/merge_sort/: main.cpp
sort/quick_sort/: main.cpp
sort/radix_sort/: main.cpp
stacks_and_queues/largest_rectangle/: README.md  main.cpp
stacks_and_queues/min_max_riddle/: README.md  main.cpp
stacks_and_queues/super_reduced_string/: README.md  main.cpp
steady_gene/: main.cpp
suffix_array/: main.cpp
super_reduced_string/: main.cpp
todo/suffix_array/: main.cpp
tools/random_vector/: CMakeLists.txt  main.cpp
trees/find_equal_subtrees/: main.cpp
trees_and_graphs/avl_tree/: CMakeLists.txt  main.cpp
trees_and_graphs/find_equal_subtrees/: input.txt
trees_and_graphs/swap_nodes/: main.cpp
trees_and_graphs/trie/: main.cpp
yandex/count_multiplication_segments/: CMakeLists.txt  main.cpp
yandex/count_user_events/: README.md  main.cpp
yandex/rand/: README.md  main.cpp
yandex/rps_limiter/: main.cpp
zero_matrix/: main.cpp
(+44 files in other folders)
